# readsbstats

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  nginx-readsbstats.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  shellcheck.yml  test.yml
docs/: README.md  Realistic ADS-B and MLAT Reception Ranges for Home Receivers.md  api.md  configuration.md  development.md  dumpvdl2-airspy-mini.md  integrations.md  operations.md  piaware_install_ubuntu_24.04_arm64.md
docs/decisions/: 0001-sqlite-wal-per-thread-connections.md  0002-duckdb-analytical-accelerator.md  0003-flag-anonymous-computed-at-query-time.md  0004-http-safe-ssrf-guard.md  0005-notification-dispatch-queue.md  0006-nginx-direct-static-serving.md  0007-sqlite-integrity-checks.md  0008-apache-echarts-frontend-charts.md  0009-maplibre-gl-frontend-map.md  0010-aircraft-db-atomic-swap.md  0011-positions-endpoints-split.md  0012-coalesce-drop-deferred.md  0014-daily-rollups-replace-duckdb.md  README.md  (+4 more)
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: _purge_helpers.py  check_db.py  dev.sh  import_rrd.py  install.sh  migrate_v6.py  notify-telegram-failure.sh  purge_bad_gs.py  purge_ghosts.py  purge_mlat_gs_spikes.py  update.sh
systemd/: notify-telegram@.service  readsbstats-collector.service  readsbstats-dbcheck-full.service  readsbstats-dbcheck-full.timer  readsbstats-dbcheck.service  readsbstats-dbcheck.timer  readsbstats-updater.service  readsbstats-updater.timer  readsbstats-vdl2.env.example  readsbstats-vdl2.service  readsbstats-web.service
templates/: aircraft.html  base.html  feeders.html  flight.html  gallery.html  index.html  live.html  map.html  metrics.html  settings.html  stats.html  watchlist.html
tests/: _helpers.py  test_adsbx_enricher.py  test_analytics.py  test_api_vdl2.py  test_cache.py  test_check_db.py  test_cleaners.py  test_collector.py  test_collector_ghost_equal_ts.py  test_collector_mlat_outlier.py  test_concurrency.py  test_config.py  test_database.py  test_db_integrity.py  test_db_updater.py  test_db_updater_airlines_recovery.py  test_downsample.py  test_enrichment.py  test_feeders_fr24.py  test_flights_has_acars.py  test_geo.py  test_health.py  test_http_safe.py  test_icao_ranges.py  test_import_rrd.py  test_map.py  test_metrics_collector.py  test_migrate_v6.py  test_notifier.py  test_notifier_watch_escape.py  test_photo_sources.py  test_posenc.py  test_purge_bad_gs.py  test_purge_ghosts.py  test_purge_mlat_gs_spikes.py  test_rollups.py  test_route_enricher.py  test_schemas.py  test_sim.py  test_stats_compute_identity.py  (+10 more)
(+273 files in other folders)
