[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readsbstats"
version = "1.5.2"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "aiofiles==25.1.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ui-tests = [
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
norecursedirs = ["tests/ui", "tests/js", ".git", "__pycache__", ".venv", "venv"]
markers = [
    "ui: Playwright mobile smoke tests — run with: pytest tests/ui/ -v -m ui",
]

[tool.coverage.run]
source = ["readsbstats", "purge_ghosts", "purge_bad_gs", "purge_mlat_gs_spikes"]
