[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "readsbstats"
version = "2.11.8"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "httpx==0.28.1",
    "duckdb==1.5.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ui-tests = [
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
norecursedirs = ["tests/ui", "tests/js", ".git", "__pycache__", ".venv", "venv"]
markers = [
    "ui: Playwright mobile smoke tests — run with: pytest tests/ui/ -v -m ui",
]

[tool.coverage.run]
source = ["readsbstats", "purge_ghosts", "purge_bad_gs", "purge_mlat_gs_spikes"]
