[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "readsbstats"
version = "2.23.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ui-tests = [
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
norecursedirs = ["tests/ui", "tests/js", ".git", "__pycache__", ".venv", "venv"]
markers = [
    "ui: Playwright mobile smoke tests — run with: pytest tests/ui/ -v -m ui",
]

[tool.coverage.run]
source = ["readsbstats", "purge_ghosts", "purge_bad_gs", "purge_mlat_gs_spikes"]

[tool.coverage.report]
# The `sys.exit(main())` entry guards (collector, vdl2_collector, scripts) are
# only reachable via `python -m`, never from tests — exclude them from the
# denominator instead of pretending they're a coverage gap.
exclude_also = ["if __name__ == .__main__.:"]
